--- a/web/frontend/src/index.css
+++ b/web/frontend/src/index.css
@@ -142,3 +142,16 @@ body{
     color: rgb(76,109,240);
     font-weight: bold;
 }
+
+.result-resume-1{
+    margin-top: 10%;
+    overflow-y: scroll;
+    max-height: 450px;
+    min-height: 450px;
+    padding-right: 20px;
+    color: black;
+}
+
+.according-body{
+    min-height: 400px !important;
+}
